# entra_signin_etl

./: .env.example  main.py  pyproject.toml  spec.md
src/adapters/: graph_api_client.py  postgres_repo.py
src/application/: etl_use_case.py
src/application/interfaces/: api_port.py  db_port.py
src/domain/: exceptions.py  models.py
src/infrastructure/: auth.py  config.py  logger.py
